--- a/html/ILUSTRACIÓN Y DIBUJO.html
+++ b/html/ILUSTRACIÓN Y DIBUJO.html
@@ -133,7 +133,7 @@
                 <img src="../ASSETS/Chica.jpg">
                 <div class="info">
                     <h2 class="art-title">Lilith</h2>
-                    <p class="description">Ilustración digital de personaje propio original para un proyecto escolar</p>
+                    <p class="description">Ilustración digital de personaje para un proyecto escolar</p>
                     <div class="ficha">
                         <p><strong>Artista:</strong> BalQuir</p>
                         <p><strong>Técnica:</strong> Ilustración digital realizada en Ibis Paint con técnica semirealista. </p>
@@ -145,7 +145,7 @@
                 <img src="../ASSETS/Alien.PNG">
                 <div class="info">
                     <h2 class="art-title"> Diosa Alienígena </h2>
-                    <p class="description">Ilustración digital de personaje propio original para concurso de redes sociales.</p>
+                    <p class="description">Ilustración digital de personaje para concurso de redes sociales.</p>
                     <div class="ficha">
                         <p><strong>Artista:</strong> BalQuir</p>
                         <p><strong>Técnica:</strong> Ilustración digital realizada en ClipStudio Paint con técnica semirealista y una combinación de estilo cartoon. </p>
@@ -169,7 +169,7 @@
                 <img src="../ASSETS/JORG.PNG">
                 <div class="info">
                     <h2 class="art-title">Caballero</h2>
-                    <p class="description">Ilustración digital de personaje propio original</p>
+                    <p class="description">Ilustración digital de personaje.</p>
                     <div class="ficha">
                         <p><strong>Artista:</strong> BalQuir</p>
                         <p><strong>Técnica:</strong> Ilustración digital realizada en Ibis Paint con técnica semirealista. </p>
