Update ILUSTRACIÓN Y DIBUJO.html

--- a/html/ILUSTRACIÓN Y DIBUJO.html
+++ b/html/ILUSTRACIÓN Y DIBUJO.html
@@ -157,7 +157,7 @@
                 <img src="../ASSETS/Diablo.PNG">
                 <div class="info">
                     <h2 class="art-title">Diabla</h2>
-                    <p class="description">Ilustración digital de personaje propio original</p>
+                    <p class="description">Ilustración digital de personaje.</p>
                     <div class="ficha">
                         <p><strong>Artista:</strong> BalQuir</p>
                         <p><strong>Técnica:</strong> Ilustración digital realizada en Ibis Paint con técnica semirealista. </p>
