Update FOTO Y EDICION.html

--- a/html/FOTO Y EDICION.html
+++ b/html/FOTO Y EDICION.html
@@ -759,6 +759,7 @@
                     <p><strong>Año:</strong> 202</p>
                 </div>
             </div>
+             </div>
         </div>
             <div class="gallery-item">
                 <img src="../ASSETS/EDICIÓN 1.jpg">
